--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <p> Hesapla butonuna basıldığında kullanıcının girdiği rakamı alarak o rakamın çarpım tablosunu ekrana yazdıran
         programı yazın.</p>
     <div class="clearfix"></div>
+    +import java.util.Scanner;
++public class JavaCarpim Tablosu {
+    public void main(String args) {
+       Scanner scan =new Scanner(System.in);
+        System.out.println("Bir Sayi Giriniz");
+        for(int i=1;i<=10;i++){
+            System.out.println(x+"x"+i+"="+(i*x));
+        }
+    }
+}
 </div>
 
 <div class="cevap">
