--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
     <span class="cevapNumarasi">Cevap 2 :</span>
     <div id="cevap-2" class="cevapYazdirmaAlani"></div>
     <script type="text/javascript">
-        /**
-         * Sorunun cevabını bu yorumdan sonra yazınız.
-         */
+       document.write(<table border='1'><tr>);
+                   for (var x = 1; x <= 10; x++) 
 
     </script>
     <div class="clearfix"></div>
