--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
     </div>
 
     <script type="text/javascript">
-        /**
-         * Sorunun cevabını bu yorumdan sonra yazınız.
-         */
-
-
+      <input type="button" value="BUTTONA TIKLA"  name="ÇARPIM TABLOSU" id="id_TABLO">
++                document.write("<table border='3'><tr>");
+ <input type="button" value="BUTTONA TIKLA"  name="ÇARPIM TABLOSU" id="id_TABLO">
+     var buton ismi=document.getElementBıId("hesapla");
     </script>
     <div class="clearfix"></div>
 </div>
