buraya kadar dogru mu hocam

--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
     </div>
 
     <script type="text/javascript">
-      <input type="button" value="BUTTONA TIKLA"  name="ÇARPIM TABLOSU" id="id_TABLO">
-+                document.write("<table border='3'><tr>");
- <input type="button" value="BUTTONA TIKLA"  name="ÇARPIM TABLOSU" id="id_TABLO">
-     var buton ismi=document.getElementBıId("hesapla");
+      <input type="button" value="BUTTONA TIKLA">
+             <script>hesapBtn=document.getElementById("hesapla"); 
+             hesapBtn.onclick=function(){ sayi=document.getElementById("sayi").value; 
+             sayi=Number(sayi);
+                                         var buton ismi=document.getElementBıId("hesapla");
+                                         hesapBtn.onclick=function()
+  
+
+        
     </script>
     <div class="clearfix"></div>
 </div>
