hocam 26 satır böyle mi olacak ve devamı

--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
 
     </div>
 
-    <script type="text/javascript">
+    <script type="text/javascript"> 
+        /**
+         * Sorunun cevabını bu yorumdan sonra yazınız.
+         */ 
       <input type="button" value="BUTTONA TIKLA">
              <script>hesapBtn=document.getElementById("hesapla"); 
              hesapBtn.onclick=function(){ sayi=document.getElementById("sayi").value; 
              sayi=Number(sayi);
                                          var buton ismi=document.getElementBıId("hesapla");
                                          hesapBtn.onclick=function()
+                                          document.write("<table border='3'><tr>");
+        var c=0;
+                            document.write<td>
   
 
         
