--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
                                           document.write("<table border='3'><tr>");
         var c=0;
                             document.write<td>
-  
-
-        
+   for(var a=1;i<10;a++)
+                                         document.write("<td/>")
+                                         for(var a=1;a<10;a++)
+                                             {
+ document.write(x+"x" + i + "=" + x * i + "<br/>");
+                                                   }
+                                         document.write("<td/>")
+                                                        document.write("<td/></table>")
+                                         
     </script>
     <div class="clearfix"></div>
 </div>
