--- a/index.html
+++ b/index.html
@@ -39,11 +39,16 @@
                                          document.write("<td/>")
                                          for(var a=1;a<10;a++)
                                              {
- document.write(x+"x" + i + "=" + x * i + "<br/>");
+ document.write(i+"i" + i + "=" + i * i + "<br/>");
                                                    }
                                          document.write("<td/>")
                                                         document.write("<td/></table>")
-                                         
+                                         {
+            document.write("</tr><tr>");
+            }
+            document.write("</td>");
+        }    
+        document.write("</tr><table>");                                  
     </script>
     <div class="clearfix"></div>
 </div>
